# bid_ask_service

./: Cargo.toml  README.md  build.rs  snap.json
.github/workflows/: rust.yml
benches/: btree_set_order_book.rs
docs/: add_an_orderbook.md  walkthrough.md
proto/: orderbook.proto
src/: error.rs  lib.rs
src/exchanges/: error.rs  exchange_utils.rs  mod.rs
src/exchanges/binance/: error.rs  mod.rs  stream.rs
src/exchanges/bitstamp/: error.rs  mod.rs  stream.rs
src/exchanges/kraken/: error.rs  mod.rs  stream.rs
src/order_book/: binary_tree.rs  error.rs  mod.rs  price_level.rs  rbtree.rs
src/order_book/binary_tree/: ask_tree.rs  mod.rs
src/order_book/btree_map/: mod.rs
src/order_book/btree_set/: mod.rs
src/order_book/price_level/: ask.rs  bid.rs  mod.rs
src/order_book/rbtree/: mod.rs
src/server/: error.rs  mod.rs
tests/: integration_test.rs
