[package]
name = "kbas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
log = "0.4.17"
log4rs = "1.2.0"
thiserror = "1.0.36"
criterion = {version = "0.4.0", features = ["async_tokio"]}
tokio = { version = "1.28.1", features = ["full"] }
reqwest = { version = "0.11.18", features = [ "json"] }
serde_json = "1.0.96"
tungstenite = { version = "0.19.0", features = ["rustls-tls-native-roots"] }
tokio-tungstenite = { version = "0.19.0", features = ["rustls-tls-native-roots"] }
futures = "0.3.28"
serde_derive = "1.0.163"
serde = "1.0.163"
serde_with = "3.0.0"
ordered-float = "3.7.0"


[[bin]]
name = "bid_ask_spread"
path = "bin/bid_ask_spread.rs"